made some editorial changes

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4498,12 +4498,12 @@
 
 
     <section id="change_log" class="appendix">
-      <h3>Examples by Roles, Properties and States</h3>
+      <h3>Indexes of Examples</h3>
 
       <section id="examples_by_roles" class="appendix">
 
-<h2 id="examples_by_role_label">Examples by Role</h2>
-<table aria-labelledby="examples_by_role">
+<h2 id="examples_by_role_label">Index of Examples by Role</h2>
+<table aria-labelledby="examples_by_role_label">
   <thead>
     <tr>
       <th>Role</th>
@@ -4819,7 +4819,7 @@
 
       <section id="examples_by_props" class="appendix">
 
-<h4 id="examples_by_props_label">Examples By Properties and States</h4>
+<h4 id="examples_by_props_label">Index of Examples By Properties and States</h4>
 <table aria-labelledby="examples_by_props_label">
   <thead>
     <tr>
