--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4502,7 +4502,7 @@
 
       <section id="examples_by_roles" class="appendix">
 
-<h2 id="examples_by_role_label">Index of Examples by Role</h2>
+<h2 id="examples_by_role_label">Examples by Role</h2>
 <table aria-labelledby="examples_by_role_label">
   <thead>
     <tr>
@@ -4819,7 +4819,7 @@
 
       <section id="examples_by_props" class="appendix">
 
-<h4 id="examples_by_props_label">Index of Examples By Properties and States</h4>
+<h4 id="examples_by_props_label">Examples By Properties and States</h4>
 <table aria-labelledby="examples_by_props_label">
   <thead>
     <tr>
