some style updated

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -59,7 +59,7 @@
             </button>
           </div>
           <div class="group" id= "group2">
-            <button class="toolbar-item textAlign" role="button" aria-pressed="false" value="left">
+            <button class="toolbar-item textAlign" role="button" aria-pressed="true" value="left">
               <i class="fas fa-align-left"></i>
             </button>
             <button class="toolbar-item textAlign" role="button" aria-pressed="false" value="center">
@@ -70,10 +70,10 @@
             </button> 
           </div>
           <div class="group" id="group3">
-            <button class="toolbar-item size large " value="larger" aria-pressed="false">
+            <button class="toolbar-item size" id="large" value="larger" aria-pressed="false">
               <i class="fas fa-plus"></i>
             </button>
-            <button class="toolbar-item size" role="button" value="smaller" aria-pressed="false">
+            <button class="toolbar-item size" id="small" role="button" value="smaller" aria-pressed="false">
               <i class="fas fa-minus"></i>
             </button>
           </div>  
