updated how table is generated

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4510,7 +4510,7 @@
       <th>Examples</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="examples_by_role_label_tbody">
     <tr>
       <td><code>article</code></td>
       <td>
@@ -4827,7 +4827,7 @@
       <th>Examples</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="examples_by_props_label_tbody">
     <tr>
       <td><code>aria-activedescendant</code></td>
       <td>
