--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -47,43 +47,45 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar" aria-label="Toolbar">
-          <div class="group" id="group1" tabindex="-1">
-            <button class="toolbar-item bold" aria-pressed="false" value="bold" tabindex="0">
+          <div class="group" id="group1">
+            <div role="button" class="toolbar-item bold" aria-pressed="false" value="bold" tabindex="0">
               <i class="fas fa-bold"></i>
-            </button>
-            <button class="toolbar-item italic" aria-pressed="false" value="italic">
+            </div>
+            <div role="button" class="toolbar-item italic" aria-pressed="false" value="italic" tabindex="1">
               <i class="fas fa-italic"></i>
-            </button>
-            <button class="toolbar-item underline" aria-pressed="false" value="underline">
+            </div>
+            <div role="button" class="toolbar-item underline" aria-pressed="false" value="underline" tabindex="1">
               <i class="fas fa-underline"></i>
-            </button>
+            </div>
           </div>
           <div class="group" id= "group2">
-            <button class="toolbar-item textAlign" aria-pressed="true" value="left">
+            <div role="button" class="toolbar-item textAlign" aria-pressed="true" value="left" tabindex="1">
               <i class="fas fa-align-left"></i>
-            </button>
-            <button class="toolbar-item textAlign" aria-pressed="false" value="center">
+            </div>
+            <div role="button" class="toolbar-item textAlign" aria-pressed="false" value="center" tabindex="1">
               <i class="fas fa-align-center"></i>
-            </button>
-            <button class="toolbar-item textAlign" aria-pressed="false" value="right">
+            </div>
+            <div role="button" class="toolbar-item textAlign" aria-pressed="false" value="right" tabindex="1">
               <i class="fas fa-align-right"></i>
-            </button> 
+            </div> 
           </div>
           <div class="group" id="group3">
-            <button class="toolbar-item size" id="large" value="larger" aria-pressed="false">
+            <div role="button" class="toolbar-item size" id="large" value="larger" aria-pressed="false" tabindex="1">
               <i class="fas fa-plus"></i>
-            </button>
-            <button class="toolbar-item size" id="small" value="smaller" aria-pressed="false">
+            </div>
+            <div role="button" class="toolbar-item size" id="small" value="smaller" aria-pressed="false" tabindex="1">
               <i class="fas fa-minus"></i>
-            </button>
+            </div>
           </div>  
           <div class="menu-wrapper group" >
-            <button
+            <div
+              role="button"
               aria-haspopup="true"
               aria-controls="menu1"
+              tabindex="1"
               class=" toolbar-item menu-button">
               Font
-            </button>
+          </div>
             <ul role="menu" id="menu1">
               <li role="menuitem">Sans-serif</li>
               <li role="menuitem">Serif</li>
