--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -47,7 +47,7 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar" aria-label="Toolbar">
-          <div class="group" id="group1">
+          <div class="group">
             <div role="button" class="toolbar-item bold" aria-pressed="false" value="bold" tabindex="0">
               <i class="fas fa-bold"></i>
             </div>
@@ -58,7 +58,7 @@
               <i class="fas fa-underline"></i>
             </div>
           </div>
-          <div class="group" id= "group2">
+          <div class="group">
             <div role="button" class="toolbar-item textAlign" aria-pressed="true" value="left" tabindex="1">
               <i class="fas fa-align-left"></i>
             </div>
@@ -69,7 +69,7 @@
               <i class="fas fa-align-right"></i>
             </div> 
           </div>
-          <div class="group" id="group3">
+          <div class="group">
             <div role="button" class="toolbar-item size" id="large" value="larger" aria-pressed="false" tabindex="1">
               <i class="fas fa-plus"></i>
             </div>
